--- a/style.css
+++ b/style.css
@@ -357,6 +357,9 @@ body::before {
     outline: none;
     margin: 15px 0;
     cursor: pointer;
+    box-sizing: border-box;
+    padding: 0;
+    border: none;
 }
 
 .range-slider::-webkit-slider-thumb {
@@ -366,6 +369,14 @@ body::before {
     background: #667eea;
     border-radius: 50%;
     cursor: pointer;
+    margin: 0;
+}
+
+.range-slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 6px;
+    background: #ddd;
+    border-radius: 3px;
 }
 
 .range-slider::-moz-range-thumb {
@@ -380,6 +391,10 @@ body::before {
 .range-slider::-moz-range-track {
     background: transparent;
     border: none;
+}
+
+.range-slider::-moz-range-progress {
+    background: #667eea;
 }
 
 .message {
