--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ body::before {
     outline: none;
     margin: 15px 0;
     cursor: pointer;
+    padding: 0 !important;
 }
 
 .range-slider::-webkit-slider-thumb {
